...
        }
      }
    }
    .navigationDestination(isPresented: $showAddView, destination: {
      AddPasswordView()
    })
    .navigationTitle("Password List")
    .toolbar {
      ToolbarItem(placement: .navigationBarTrailing) {
        Button {
          showAddView.toggle()
        } label: {
          Label("Add", systemImage: "plus.circle")
        }
      }
    }
    .toolbarBackground(.orange, for: .navigationBar)
    .toolbarBackground(.visible, for: .navigationBar)
    .toolbarColorScheme(.dark, for: .navigationBar)
...
