...
					.background(Color(.orange))
					.cornerRadius(12)
			}
			.opacity(showCopy ? 1 : 0)
		}
    .padding()
    .navigationTitle("Edit Password")
		.onChange(of: password, { _, _ in
			pwStrength = pwManager.getPasswordStrength(password)
		})
    .onAppear {
      title = pw.title!
      username = pw.username!
...
